<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entryCreateRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    tools:context=".activities.EntryCreateActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.InteractiveDiary.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.InteractiveDiary.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/entryCreateScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:id="@+id/entryCreateScrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

        <EditText
            android:id="@+id/entryCreateTitleEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:textSize="34sp"/>

            <LinearLayout
                android:id="@+id/entryCreateMediaLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/entryCreateAddMediaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/add_media"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:text="@string/add_media"
                    app:icon="@drawable/ic_baseline_image_24"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <EditText
                android:id="@+id/entryCreateTextEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_text_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/entry_type_desc" />

            <RadioGroup
                android:id="@+id/createEntryRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/createEntryPrivateRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privateButton" />

                <RadioButton
                    android:id="@+id/createEntrySharedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sharedButton" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/entryCreateAddContributorsExpandableLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <EditText
                        android:id="@+id/entryCreateAddContributorEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_contributors_here"
                        android:textSize="15sp" />

                </net.cachapa.expandablelayout.ExpandableLayout>

                <RadioButton
                    android:id="@+id/createEntryPublicRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publicButton" />
            </RadioGroup>

            <Switch
                android:id="@+id/createEntryLocationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_location_to_entry" />

            <Button
                android:id="@+id/createEntryPostButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/post" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>