<resources>
    <string name="app_name">Interactive Diary</string>
    <string name="action_settings">Settings</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">a1GOMzUlyS5WAqPeVS9H8GIlV3UAPMZmKHyK34hS</string>
    <string name="back4app_client_key">B8jfg6uotkxVlfupUwhrnfVOcVbAKQihKXVVr1HX</string>
    <string name="google_maps_api_key">AIzaSyAdqtjnD8q6tp23pD0DJTXhVu6Ba_1yyJQ</string>

    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="Log_In">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="verifying_credentials">Verifying credentials...</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="signup_failed">Signup failed, please try again</string>
    <string name="signup_failed_invalid_username">Signup failed. Your username can not contain special characters.</string>
    <string name="signup_failed_invalid_password">Signup failed. Your password must contain at least 7 characters.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_entry_create">Create an Entry</string>
    <string name="title_activity_home">Home</string>
    <string name="title_listview">List View</string>
    <string name="title_mapview">Map View</string>
    <string name="deleteEntryMenuItem">Delete</string>
    <string name="internet_access_lost">Internet access lost. App functionality will be limited.</string>
    <string name="app_back_online">Back online. Pull down to refresh the feed.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="privateTab">Private</string>
    <string name="sharedTab">Shared</string>
    <string name="publicTab">Public</string>
    <string name="createEntry">Create Entry</string>
    <string name="Title">Title</string>
    <string name="entry_text_hint">Write whatever you want!</string>
    <string name="add_media">Add media</string>
    <string name="post">Post</string>
    <string name="entry_type_desc">Do you want your entry to be public, shared, or public? (You can change this later.)</string>
    <string name="privateButton">Private (only you can see and edit this entry)</string>
    <string name="sharedButton">Shared (only people you choose can see and edit this entry)</string>
    <string name="publicButton">Public (everyone can see this entry, still only you can edit this entry)</string>
    <string name="title_is_empty">You need to give your entry a title!</string>
    <string name="text_is_empty">You need to give your entry some text!</string>
    <string name="entry_type_is_empty">You need to indicate if your entry should be private, public, or shared!</string>
    <string name="title_activity_entry_details">Entry Details</string>
    <string name="nothing_here_yet">Nothing here yet...</string>
    <string name="private_nothing_here_yet">No private entries yet!</string>
    <string name="shared_nothing_here_yet">No shared entries yet!</string>
    <string name="public_nothing_here_yet">No public entries yet!</string>
    <string name="logging_out">Logging out...</string>
    <string name="logout_failed">Logout failed, please try again!</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="dots">•••••••</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="failed_to_save_user_settings">Failed to save user settings, please try again.</string>
    <string name="failed_to_delete_account">Failed to delete account, please try again.</string>
    <string name="deleting_account">Deleting Account...</string>
    <string name="confirm_account_deletion_title">Confirm Account Deletion</string>
    <string name="confirm_account_deletion_message">Are you sure you want to delete your account? All of your entries will be deleted.</string>
    <string name="you_will_receive_notifications">You will now receive notifications.</string>
    <string name="you_will_not_receive_notifications">You will no longer receive notifications.</string>
    <string name="we_need_location_permissions_for_mapview">We need permission to access your location in order to use Map View.</string>
    <string name="location_permissions_granted">Location permissions granted.</string>
    <string name="location_permissions_denied">Location permissions denied.</string>
    <string name="search_hint">Search entries...</string>=
    <string name="edit_entry">Edit entry</string>
    <string name="edit_an_entry">Edit an Entry</string>
    <string name="add_contributors_here">Type the usernames of whoever you want to add to the entry!</string>
    <string name="add_location_to_entry">Add location to entry?</string>
    <string name="no_camera">You have no camera app that InteractiveDiary can use to take a photo or video.</string>
    <string name="no_gallery">You have no gallery app that InteractiveDiary can use to upload a photo or video.</string>
    <string name="error_camera_media">Something went wrong capturing the media, please try again.</string>
    <string name="error_gallery_media">Something went wrong uploading the media, please try again</string>
    <string name="capture_media_with_camera">Capture media with camera</string>
    <string name="upload_media_from_gallery">Upload media from gallery</string>
    <string name="add_media_description">Add an optional media description here.</string>
    <string name="send_it">Send it!</string>
    <string name="nevermind">Never mind...</string>
    <string name="delete_media">Delete media from entry</string>
    <string name="update_media">Update media</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_entry_deletion_title">Delete Entry</string>
    <string name="confirm_entry_deletion_message">Are you sure you want to delete this entry?</string>
</resources>