<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entryDetailsRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    tools:context=".activities.EntryDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.InteractiveDiary.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.InteractiveDiary.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/entryDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:id="@+id/entryDetailsScrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/entryDetailsTitleTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="34sp"
                    tools:text="Day at the Beach" />

                <Button
                    android:id="@+id/entryDetailsSettingsButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="6"
                    android:visibility="gone"
                    app:icon="@drawable/ic_baseline_settings_24"
                    tools:visibility="visible" />

            </LinearLayout>

            <TextView
                android:id="@+id/entryDetailsAuthorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Meghan" />

            <TextView
                android:id="@+id/entryDetailsTimestampTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Wed Aug 24 2042" />

            <LinearLayout
                android:id="@+id/entryDetailsMediaLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/entryDetailsTextTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>